<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contactos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list">CONTACTOS</string>
    <string name="nombre">Nombre</string>
    <string name="email">E-Mail</string>
    <string name="telefono">Telefono</string>
    <string name="insertar">Insertar Contacto</string>
    <string name="consultar">Consultar Contactos</string>
    <string name="separa">|</string>

</resources>
