<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre" />
    
    <EditText 
        android:id="@+id/ET_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />
    
    <EditText 
        android:id="@+id/ET_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono" />
    
    <EditText 
        android:id="@+id/ET_Telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />
    
    <Button 
        android:id="@+id/Bt_Insertar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insertar" 
        android:onClick="insertar"/>
    
    <Button 
        android:id="@+id/Bt_Consultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consultar" 
        android:onClick="consultar"/>
    
</LinearLayout>
